left aligned covid preview and fixed showtime links

--- a/css/modal.css
+++ b/css/modal.css
@@ -1,7 +1,7 @@
 /* The Covid-19 Banner */
 #covid-19-banner {
   padding: 0.5em 1em;
-  background-color:#bf0000;
+  background-color: #bf0000;
   color: white;
   display: flex;
   justify-content: flex-end;
@@ -16,11 +16,10 @@
 .close-banner {
   font-size: 1.5em;
   font-weight: bold;
-
 }
 
 #btn-read-more {
-  display:inline-block;
+  display: inline-block;
   margin: 0 1.5em;
   background-color: #fff;
   border: 2px solid #fff;
@@ -31,7 +30,7 @@
 }
 
 #btn-read-more:hover {
-  background-color: #bf0000; 
+  background-color: #bf0000;
   color: white;
 }
 
@@ -45,8 +44,8 @@
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.6); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
@@ -54,7 +53,7 @@
   background-color: #fefefe;
   position: fixed; /* Stay in place */
   left: 20vw;
-  top:0;
+  top: 0;
   color: #000;
   text-align: left;
   margin: 15% auto; /* 15% from the top and centered */
@@ -82,4 +81,10 @@
 
 .modal li {
   font-size: 1rem;
+}
+
+@media screen and (max-width: 900px) {
+  .notice-content {
+    text-align: left;
+  }
 }
